--- a/index.html
+++ b/index.html
@@ -1,13 +1,65 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
-  <head>  
-    <meta charset="utf-8" />
-    <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
-    <title>Лабораторная работа 5</title>
-    <link rel="stylesheet" href="https://www.x3dom.org/download/x3dom.css" />
-    <script src="https://www.x3dom.org/download/x3dom.js"></script>
-  </head>
-  <body>
-    <h1>Здесь только я. А должна быть твоя лаба!</h1>
-  </body> 
-</html>
+        <head> 
+            <title>lr5</title> 
+             <script type='text/javascript' src='http://x3dom.org/download/dev/x3dom-full.js'> </script>
+            <link rel='stylesheet' type='text/css' href='http://x3dom.org/download/dev/x3dom.css'></link> 
+        </head> 
+        <body> 
+            <h1>ЛР5</h1> 
+            <p> 
+                Анимация с использованием таймеров и линейных интерполяторов
+            </p>
+                <x3d width='1000px' height='400px'> 
+                    <scene> 
+                       <Background groundAngle='0.9 1.5 1.57' groundColor='0.6 0.7 0.1 0.4 0.7 0.2 0.1 0.6 0.1 0 0.3 0.1' skyAngle='0.9 1.5 1.57' skyColor='0.21 0.18 0.66 0.2 0.44 0.85 0.51 0.81 0.95 0.77 0.8 0.82'></Background>
+                          <TimeSensor DEF='Time' cycleInterval='3' loop='true' enabled='true'></TimeSensor> 
+
+                            <PositionInterpolator DEF='PosInt' key='0 .1 .15 .2 .25 .3 .35 .4 .45 .5 .55 .6 .65 .7 .75 .8 .85 .9 1'
+                                keyValue='0 0 0, 2 2 0, 4 3 0, 6 3 0, 8 2 0,
+                                                 8 -2 0, 6 -3 0, 4 -3 0, 2 -2 0,
+                                          0 0 0, -2 2 0, -4 3 0, -6 3 0, -8 2 0,
+                                                 -8 -2 0, -6 -3 0, -4 -3 0, -2 -2 0, 0 0 0'>   </PositionInterpolator>
+
+                        <ScalarInterpolator DEF='ScInt' key='0 .5 1'
+                        keyValue='.1 .9 .1'></ScalarInterpolator>
+
+
+                        <transform DEF="hz" translation='0 0 0' scale='2 2 2'>
+                            <shape>
+                                <indexedLineSet
+                                    coordIndex='0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 0'>
+                                        <Coordinate point='0 0 0, 1 1 0, 2 1.5 0, 3 1.5 0,
+                                                           4 1 0, 4 -1 0, 3 -1.5 0, 2 -1.5 0,
+                                                           1 -1 0, -1 1 0, -2 1.5 0, -3 1.5 0,
+                                                           -4 1 0, -4 -1 0, -3 -1.5 0, -2 -1.5 0, -1 -1 0,'></Coordinate>
+                                </indexedLineSet>
+                            </shape>
+                        </transform>
+
+                        <Transform DEF='Trans' translation='0 0 0'>
+                             <Shape>
+                               <appearance>
+                                        <material DEF="Mat" diffuseColor ='0.55 0.6 1'></material>
+                                        <ImageTexture url='https://pp.userapi.com/c847016/v847016986/602df/vu9DnFCBCFs.jpg'></ImageTexture>
+                                    </appearance>
+                               <Sphere DEF="S" radius='2'></Sphere>
+                             </Shape>
+                           </Transform>
+
+
+                           <ROUTE fromNode='Time' fromField='fraction_changed'
+                                   toNode='PosInt' toField='set_fraction'></ROUTE>
+                           <ROUTE fromNode='PosInt' fromField='value_changed'
+                                   toNode='Trans' toField='set_translation'></ROUTE>
+
+                        <ROUTE fromNode='Time' fromField='fraction_changed'
+                                toNode='ScInt' toField='set_fraction'></ROUTE>
+                         <ROUTE fromNode='ScInt' fromField='value_changed'
+                                 toNode='Mat' toField='set_transparency'></ROUTE> 
+
+                    </scene>
+                    
+                </x3d> 
+        </body> 
+    </html>
