--- a/index.html
+++ b/index.html
@@ -69,24 +69,22 @@
 					<material diffuseColor="green"></material>
 					<ImageTexture URL='ss11.JPG'></ImageTexture>
 				</Appearance> 
-		<IndexedFaceSet  solid="false" 
-		coordIndex="
-		0 1 3 2	 -1
-		" > 
-		<Coordinate point="
-		0 0 0
-		40 0 0
-		0 0 40
-		40 0 40
-		
-	"></Coordinate>
-	</IndexedFaceSet> 
+				<IndexedFaceSet  solid="false" 
+					coordIndex="
+					0 1 3 2	 -1
+					" > 
+					<Coordinate point="
+					0 0 0
+					40 0 0
+					0 0 40
+					40 0 40"></Coordinate>
+				</IndexedFaceSet> 
 			</Shape>
 		</Transform>
 	<!-- дверь -->
 	<Transform DEF="Trans" translation="-20 0 -20"> 
-		<Anchor url= "https://www.youtube.com/watch?v=uuL6cJPz3Nk" > 
-		<Inline URL="red.x3d"/>
+		<Anchor url= "https://www.youtube.com/watch?v=uuL6cJPz3Nk"></Anchor>
+		<Inline URL="red.x3d"></Inline>
 	</Transform>
 		<!-- потолок -->
 	<Transform DEF="o" translation="-20 0 -20"> 
@@ -95,17 +93,16 @@
 					<material diffuseColor="green"></material>
 					<ImageTexture URL='potolok.JPG'></ImageTexture>
 				</Appearance> 
-		<IndexedFaceSet  solid="false" 
-		coordIndex="
-		0 1 2 3	 -1
-		" > 
-		<Coordinate point="
-		40 20 40
-		40 20 0
-		0  20  0
-		0 20 40">
-		</Coordinate point>
-		</IndexedFaceSet> 
+				<IndexedFaceSet  solid="false" 
+				coordIndex="
+				0 1 2 3	 -1
+				" > 
+				<Coordinate point="
+				40 20 40
+				40 20 0
+				0  20  0
+				0 20 40"></Coordinate>
+				</IndexedFaceSet> 
 			</Shape>
 		</Transform>
 		
@@ -115,7 +112,7 @@
 						metadata='X3DMetadataObject' on='true' radius='5' shadowCascades='1' shadowFilterSize='0' 
 						shadowIntensity='0' shadowMapSize='1024' shadowOffset='0' shadowSplitFactor='1' 
 						shadowSplitOffset='0.1' zFar='-1' zNear='-1' ></SpotLight>
-						<transform translation='-20 2.2 40'>
+						<Transform translation='-20 2.2 40'>
 							<Collision enabled="true">
 								<Shape DEF='column'>
 									<Appearance>
@@ -124,7 +121,7 @@
 									<Cylinder height='6' radius='0.2'></Cylinder>
 								</Shape>
 							</Collision>
-						</transform>
+						</Transform>
 		</Group>
 						
 		<transform rotation='0 1 0 3.14'>
@@ -141,26 +138,24 @@
 					<material diffuseColor="green"></material>
 					<ImageTexture URL='potolok.JPG'></ImageTexture>
 				</Appearance> 
-		<IndexedFaceSet  solid="false" 
-		coordIndex="
-		0 1 4 -1
-		1 2 4 -1
-		2 3 4 -1
-		3 0 4 -1
-		" > 
-		<Coordinate point="
-		40 20 40
-		40 20 0
-		0  20  0
-		0 20 40
-		20 30 20">
-		</Coordinate>
-		</IndexedFaceSet> 
+				<IndexedFaceSet  solid="false" 
+				coordIndex="
+				0 1 4 -1
+				1 2 4 -1
+				2 3 4 -1
+				3 0 4 -1"> 
+				<Coordinate point="
+				40 20 40
+				40 20 0
+				0  20  0
+				0 20 40
+				20 30 20"></Coordinate>
+				</IndexedFaceSet> 
 			</Shape>
 		</Transform>
 		<!-- земля --->
-		<transform DEF='RedCar' translation='-20 00 -20'>
-				<Shape> 
+		<Transform DEF='RedCar' translation='-20 00 -20'>
+			<Shape> 
 				<Appearance> 
 					<material diffuseColor="green"></material>
 					<ImageTexture URL='ss11.JPG'></ImageTexture>
@@ -180,11 +175,10 @@
 				-40 0 -40
 				80 0 -40
 				80 0 80
-				-40 0 80
-			"></Coordinate>
-	</IndexedFaceSet>
-	</shape>
-		</transform>
+				-40 0 80"></Coordinate>
+				</IndexedFaceSet>
+			</Shape>
+		</Transform>
 		<ROUTE fromNode='Time' fromField='fraction_changed' 
                toNode="orInt" toField='set_fraction'>
         </ROUTE>
