--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		</Transform>
 	<!-- дверь -->
 	<Transform DEF="Trans" translation="-20 0 -20"> 
-		<Anchor url= "https://www.youtube.com/watch?v=uuL6cJPz3Nk"></Anchor>
+		<Anchor URL= "https://www.youtube.com/watch?v=uuL6cJPz3Nk"></Anchor>
 		<Inline URL="red.x3d"></Inline>
 	</Transform>
 		<!-- потолок -->
