--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<Shape> 
 				<Appearance> 
 					<material diffuseColor="green"></material>
-					<ImageTexture URL='ss11.JPG'></ImageTexture>
+					<ImageTexture URL='ss11.jpg'></ImageTexture>
 				</Appearance> 
 				<IndexedFaceSet  solid="false" 
 					coordIndex="
@@ -91,7 +91,7 @@
 			<Shape> 
 				<Appearance> 
 					<material diffuseColor="green"></material>
-					<ImageTexture URL='potolok.JPG'></ImageTexture>
+					<ImageTexture URL='potolok.jpg'></ImageTexture>
 				</Appearance> 
 				<IndexedFaceSet  solid="false" 
 				coordIndex="
@@ -136,7 +136,7 @@
 			<Shape> 
 				<Appearance> 
 					<material diffuseColor="green"></material>
-					<ImageTexture URL='potolok.JPG'></ImageTexture>
+					<ImageTexture URL='potolok.jpg'></ImageTexture>
 				</Appearance> 
 				<IndexedFaceSet  solid="false" 
 				coordIndex="
@@ -158,7 +158,7 @@
 			<Shape> 
 				<Appearance> 
 					<material diffuseColor="green"></material>
-					<ImageTexture URL='ss11.JPG'></ImageTexture>
+					<ImageTexture URL='ss11.jpg'></ImageTexture>
 				</Appearance> 
 				<IndexedFaceSet  solid="false" 
 				coordIndex="
