--- a/index.html
+++ b/index.html
@@ -14,26 +14,23 @@
     <scene>
 		<Collision enabled="true">
 		<TimeSensor id="Time" DEF='Time' cycleInterval='5' loop='true' enabled='true'></TimeSensor>
-        <PositionInterpolator DEF='PosInt' key='0 0.25 0.5 0.75 1' keyValue='-3 -3 0, -3 3 0, 3 3 0, 3 -3 0, -3 -3 0 '></PositionInterpolator>
+        <PositionInterpolator DEF='PosInt' key='0 0.25 0.5 0.75 1' keyValue='-3 -3 0, -3 3 0, 3 3 0, 3 -3 0, -3 -3 0'/>
 		<OrientationInterpolator DEF='orInt' key="0 0.25 0.5 0.75 1" keyValue="0 1 0 0,
 											0 1 0 1.57,
 											0 1 0 3.14,
 											0 1 0 4.71,
-											0 1 0 6.28">
-		</OrientationInterpolator>
-																				
-		<ColorInterpolator DEF='colInt' key='0 0.25 0.5 0.75 1' keyValue='0 1 0 , 1 1 0, 1 0 1, 1 1 1, 0 0 0'></ColorInterpolator>
+											0 1 0 6.28"/>								
+		<ColorInterpolator DEF='colInt' key='0 0.25 0.5 0.75 1' keyValue='0 1 0 , 1 1 0, 1 0 1, 1 1 1, 0 0 0'/>
 		
 		<navigationInfo avatarSize="0.001 1.2 0.5" speed="10" headlight="true" type="Fly"></navigationInfo>
-        <Background groundAngle='0.9 1.5 1.57' groundColor='0.4 0.7 0.1 0.4 0.3 0.2 0.1 0.6 0.1 0 0.3 0.1' skyAngle='0.9 1.5 1.57' skyColor='0.21 0.18 0.66 0.2 0.44 0.85 0.51 0.81 0.95 0.77 0.8 0.82'>
-        </Background>
+        <Background groundAngle='0.9 1.5 1.57' groundColor='0.4 0.7 0.1 0.4 0.3 0.2 0.1 0.6 0.1 0 0.3 0.1' skyAngle='0.9 1.5 1.57' skyColor='0.21 0.18 0.66 0.2 0.44 0.85 0.51 0.81 0.95 0.77 0.8 0.82'/>
 				<PointLight location="90 90 90" color="1 0 0" intensity="0.7" shadowIntensity="0.1" shadowMapSize="1"></PointLight>
 		<!-- стены --> 
 		<Transform DEF="korobka dlya 3 lab" translation="-20 0 -20"> 
 			<Shape> 
 				<Appearance> 
 					<material diffuseColor="green"></material>
-				<ImageTexture URL='wood.jpg'/>
+					<ImageTexture URL='wood.jpg'/>
 				</Appearance> 
 		<IndexedFaceSet  solid="false"  
 		coordIndex="
@@ -58,7 +55,7 @@
 		    16 10 40
 			16 0 40 
 		    10 20 40
-				40 10 40"/>
+		 40 10 40"/>
 		</IndexedFaceSet> 
 			</Shape>
 		</Transform>
@@ -83,8 +80,8 @@
 		</Transform>
 	<!-- дверь -->
 	<Transform DEF="Trans" translation="-20 0 -20"> 
-		<Anchor URL= "https://www.youtube.com/watch?v=uuL6cJPz3Nk"></Anchor>
-		<Inline URL="red.x3d"></Inline>
+		<Anchor URL= "https://www.youtube.com/watch?v=uuL6cJPz3Nk"/>
+		<Inline URL="red.x3d"/>
 	</Transform>
 		<!-- потолок -->
 	<Transform DEF="o" translation="-20 0 -20"> 
