--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		</IndexedFaceSet> 
 			</Shape>
 		</Transform>
-		<!-- пол --->
+		<!-- пол -->
 		<Transform DEF="korobka dlya 3 lab" translation="-20 0 -20"> 
 			<Shape> 
 				<Appearance> 
@@ -149,7 +149,7 @@
 				</IndexedFaceSet> 
 			</Shape>
 		</Transform>
-		<!-- земля --->
+		<!-- земля -->
 		<Transform DEF='RedCar' translation='-20 00 -20'>
 			<Shape> 
 				<Appearance> 
