--- a/index.html
+++ b/index.html
@@ -102,12 +102,11 @@
 			</Shape>
 		</Transform>
 		
-		<Group DEF='road_light_col'>
+		<Group DEF='light_col'>
 				<SpotLight ambientIntensity='0' attenuation='1,0,0' beamWidth='1.5707963' color='0,1,1' 
 				cutOffAngle='1.5707963' direction='0,-1,0' global='false' intensity='1' location='0,5.5,10.2' 
 				metadata='X3DMetadataObject' on='true' radius='5' shadowCascades='1' shadowFilterSize='0' 
-				shadowIntensity='0' shadowMapSize='1024' shadowOffset='0' shadowSplitFactor='1' 
-				shadowSplitOffset='0.1' zFar='-1' zNear='-1' ></SpotLight>
+				shadowIntensity='0' shadowMapSize='1024' shadowOffset='0' shadowSplitFactor='1' shadowSplitOffset='0.1' zFar='-1' zNear='-1' ></SpotLight>
 				<Transform translation='-20 2.2 40'>
 					<Collision enabled="true">
 						<Shape DEF='column'>
@@ -122,7 +121,7 @@
 						
 		<Transform rotation='0 1 0 3.14'>
 			<Collision enabled="true">
-				<Group USE='road_light_col'></Group>
+				<Group USE='light_col'></Group>
 			</Collision>
 		</Transform>
 		<!-- крыша -->
@@ -179,76 +178,6 @@
                toNode='Trans' toField='set_translation'>
         </ROUTE>
 
-		<ROUTE fromNode='Time' fromField='fraction_changed' 
-               toNode="colInt" toField='set_fraction'>
-        </ROUTE>
-        <ROUTE fromNode='colInt' fromField='value_changed' 
-               toNode='material' toField='set_diffuseColor'>
-        </ROUTE>
-	</Collision>
-    </Scene>
-</x3d>
-</body>
-</html>
-				shadowSplitOffset='0.1' zFar='-1' zNear='-1' ></SpotLight>
-				<Transform translation='-20 2.2 40'>
-					<Collision enabled="true">
-						<Shape DEF='column'>
-							<Appearance>
-							<material def='material' diffuseColor='1 1 1'/>
-						</Appearance>
-						<Cylinder height='6' radius='0.2'></Cylinder>
-						</Shape>
-					</Collision>
-				</Transform>
-		</Group>
-						
-		<Transform rotation='0 1 0 3.14'>
-			<Collision enabled="true">
-				<Group USE='road_light_col'></Group>
-			</Collision>
-		</Transform>
-		<!-- крыша -->
-		<Transform DEF="1o" translation="-20 0 -20"> 
-			<Shape> 
-				<Appearance> 
-					<material diffuseColor="green"></material>
-					<ImageTexture URL='potolok.jpg'/>
-				</Appearance> 
-		<IndexedFaceSet  solid="false" 
-		coordIndex="
-		0 1 4 -1
-		1 2 4 -1
-		2 3 4 -1
-		3 0 4 -1
-		" > 
-		<Coordinate point="
-		40 20 40
-		40 20 0
-		0  20  0
-		0 20 40
-		20 30 20"></Coordinate>
-		</IndexedFaceSet> 
-			</Shape>
-		</Transform>
-		<!-- земля -->
-		<Transform DEF="zemlya" translation="-30 0 -30"> 
-			<Shape> 
-			<ElevationGrid  xDimension="5" zDimension="5"
-								height="0, 0, 0, 0,0,
-									0, 0, 0, 0,0,
-									0, 0, 0, 0,0,
-									0,3, 2, 4,1,
-									1 6, 5,7, 1"
-						xSpacing='20.0' zSpacing='20.0' solid="false">
-			</ElevationGrid>
-				<Appearance> 
-					<material diffuseColor="green"></material>
-					<ImageTexture URL='ss11.jpg'/>
-				</Appearance> 
-			</Shape>
-		</Transform>
-	
 		<ROUTE fromNode='Time' fromField='fraction_changed' 
                toNode="colInt" toField='set_fraction'>
         </ROUTE>
